# python-web-scraping

./: LICENSE  README.md  google.py  pyproject.toml
BeautifulSoup-Selenium/: introduction.py  reclame_aqui.py
